align fix

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,10 @@ body {
 .blue {
     color: blue;
 }
+
+@font-face {
+    font-family: "Bugaki";
+    src: url("./fonts/Bugaki.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
